--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Team House</title>
+    <title>Yuri Tanaka </title>
     <link rel="stylesheet" href="build/styles/main.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -12,32 +12,44 @@
 <body>
     <div class="container">
         <header>
-            <img class="perfil" src="/src/imagens/img.teamhouse.jpg" width="96px" height="96px" alt="">
+            <img class="perfil" src="/src/imagens/foto.jpg" width="96px" height="96px" alt="">
             <div class="bio-perfil">
-                <h1 class="perfil-titulo">Team House</h1>
-                <h2 class="perfil-sub-titulo">Negocios Imobiliarios </h2>
+                <h1 class="perfil-titulo">Yuri Tanaka </h1>
+                <h2 class="perfil-sub-titulo">
+                    <ul>
+                        <li>
+                            🏆- Artista premiado 🏆
+                        </li>
+                        <li><br>
+                            Você tá procurando uma tattoo que seja puro estilo e técnica de mestre? Yuri Tanaka é um verdadeiro artista premiado, com mais de 6 anos de experiencia transformando ideias em obras de arte, especializado em pontilhismo geométrico e preto e cinza. Se você quer uma peça única que combine arte e precisão, é com ele mesmo!
+                        </li>
+                        <li><br>
+                            📬 Agenda Aberta! Não perca a chance de ter uma arte exclusiva na sua pele. Mande uma DM agora e garanta seu espaço! 📍 Suzano / Morumbi - SP Vamos transformar suas ideias em uma obra-prima! 💥👊
+                        </li>
+                    </ul>
+                </h2>
                 
             </div>
         </header>
         <nav>
             <ul class="links">
                 <li>
-                    <a href="https://www.instagram.com/teamhouseimoveis?igsh=MWxocGpqeDl2M2pmdQ==">
+                    <a href="https://www.instagram.com/tanaka.tattoo/">
                         <img src="./src/imagens/instagram.svg" alt="Logo do instagram">
                     </a>
                 </li>
                 <li>
-                    <a href="https://br.linkedin.com/company/team-house-im%C3%B3veis-ltda?trk=public_profile_experience-item_profile-section-card_subtitle-click">
+                    <a href="https://www.linkedin.com/in/yuri-tanaka-15bba3326?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=ios_app ">
                         <img src="./src/imagens/linkedin.svg" alt="Logo do linkdin">
                     </a>
                 </li>
                 <li>
-                    <a href="mailto:contato@teamhouse.imb.br">
+                    <a href="mailto:Tanakatatto@outlook.com">
                         <img src="./src/imagens/mail.svg" alt="Logo do E-mail">
                     </a>
                 </li>
                 <li>
-                    <a href="https://api.whatsapp.com/send?phone=5511941442030&text=Gostaria%20de%20maiores%20informa%C3%A7%C3%B5es ">
+                    <a href="https://wa.me/5511983307023?text=Ol%C3%A1%20Tudo%20Bem%3F%20Quero%20Fazer%20um%20or%C3%A7amento!!">
                         <img src="./src/imagens/phone.svg" alt="Logo de telefone">
                     </a>
             </ul>
@@ -45,22 +57,12 @@
         <nav>
             <ul class="lista-de-projetos">
                 <li class="itens-da-lista">
-                    <a href="https://www.teamhouse.imb.br/">
-                        Site Team House 
+                    <a href="https://g.page/r/CX0L9mxynswcEAI/review ">
+                        Localização Estudio 
                     </a>
                 <li class="itens-da-lista">
-                    <a href="https://www.youtube.com/channel/UCikynCDXmBXbNY9CHJJ7fuw?view_as=subscriber">
-                        Youtube
-                    </a>
-                </li>
-                <li class="itens-da-lista">
-                    <a href="https://www.facebook.com/teamhouse.imb.br">
+                    <a href="https://www.facebook.com/share/a9GaNY9erGDgoVaJ/?mibextid=LQQJ4d">
                         Facebook
-                    </a>
-                </li>
-                <li class="itens-da-lista">
-                    <a href="https://teamhouseimoveis.blogspot.com/">
-                        Blogger
                     </a>
                 </li>
             </ul>
